letter spacing correction

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,7 @@
 
   h1 {
     color: white;
+    letter-spacing: 1.1px;
     position: absolute;
     bottom: 150px;
     left: 150px;
@@ -32,6 +33,7 @@
   }
   a:hover{
     text-decoration: underline;
+    letter-spacing: 1.1px;
     color: white;
 
   }
@@ -77,9 +79,11 @@
 
 h2 {
   text-align: center;
+  letter-spacing: 1.1px;
 }
 h3 {
   text-align: center;
+  letter-spacing: 1.1px;
 }
 
 
